# osm-addr-bot

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  TODO.md  aliases.py  category.py  check.py  check_base.py  checks.py  config.py  default.nix  duplicate_search.py  main.py  osmapi.py  overpass.py  overpass_entry.py  pyproject.toml  shell.nix  state.py  utils.py
scripts/: docker-update.sh
